fix content layout for help text

--- a/views/partials/space.html
+++ b/views/partials/space.html
@@ -43,7 +43,8 @@
   <div class="space-empty" v-cloak v-if="active_view == 'space' && !present_mode && active_space_artifacts.length == 0">
     <div class="table-fake">
       <div class="cell">
-        <p><%= __('tool_space_help')%></p>
+        <p><%= __('tool_space_help_part_one')%><br>
+           <%= __('tool_space_help_part_two')%></p>
       </div>
     </div>
   </div>
