WIP chargebee integration sketch

--- a/views/spacedeck.ejs
+++ b/views/spacedeck.ejs
@@ -57,6 +57,9 @@
     <script src="/javascripts/spacedeck_directives.js"></script>
     <script src="/javascripts/spacedeck_vue.js"></script>
 
+    <!-- TODO: only include based on config -->
+    <script src="https://js.chargebee.com/v2/chargebee.js"></script>
+    
     <script>if (window.module) module = window.module;</script>
   </head>
 
