load classroom from code

--- a/views/partials/folders.html
+++ b/views/partials/folders.html
@@ -158,11 +158,13 @@
               <ul class="select-list">
                 <li v-on:click="download_space_as_pdf(item)"><span><span class="icon icon-sm icon-clipboard"></span><%=  __('download_as_pdf') %></span></li>
                 <li v-on:click="rename_space(item)"><span><span class="icon icon-sm icon-tag"></span><%=  __('rename') %></span></li>
+                <li v-on:click="enter_space_code(item)"><span><span class="icon icon-sm icon-lock-closed"></span><%=  __('enter_code') %></span></li>
                 <li v-on:click="delete_space(item)"><span><span class="icon icon-sm icon-trash"></span><%=  __('delete') %></span></li>
               </ul>
             </div>
           </div>
         </div>
+
         <span class="item-appendix">
           <span class="pull-right item-date">{{item.updated_at | date 'YYYY-MM-DD'}}</span>
 
@@ -175,7 +177,6 @@
             {{item.creator.nickname}}
           </span>
         </span>
-
       </div>
 
     </div>
