--- a/views/spacedeck.ejs
+++ b/views/spacedeck.ejs
@@ -68,6 +68,7 @@
     <%- include("./partials/account.html") %>
     <%- include("./partials/meta.html") %>
     <%- include("./partials/meta-folder.html") %>
+    <%- include("./partials/enter-classroom.html") %>
     <%- include("./partials/modal/access.html") %>
     <%- include("./partials/modal/folder-settings.html") %>
   </body>
